# uwmsprayer

./: Makefile  README  README.md  dsttest.c  uwmsprayer.c  uwmsprayer.h
libitl-0.7.0/: AUTHORS  Makefile  Makefile.in  README  autogen.sh  config.status  configure  configure.in  configure.in.libtool
libitl-0.7.0/hijri/: Makefile  README
libitl-0.7.0/hijri/src/: Makefile  demo_hijri.c
libitl-0.7.0/prayertime/: INSTALL  Makefile  README
libitl-0.7.0/prayertime/src/: Makefile  demo_prayer.c
libitl-0.7.0/swig/: Makefile  README  libitl.i  perl-demo.pl
